buildscript {
    repositories {
        mavenCentral()
    }

    dependencies {
        // this plugin
        classpath 'org.jsonschema2pojo:jsonschema2pojo-gradle-plugin:1.1.0'
    }
}

plugins {
    id 'com.github.ben-manes.versions' version '0.43.0'
    id 'org.springframework.boot' version '2.7.4'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

apply plugin: 'java'
apply plugin: 'groovy'
apply plugin: 'maven-publish'
apply plugin: 'org.springframework.boot'
apply plugin: 'jsonschema2pojo'

javadoc {
    source = sourceSets.main.allJava
    classpath = configurations.runtimeClasspath
    options.windowTitle = 'FINT Java SSE Adapter Skeleton'
    options.memberLevel = JavadocMemberLevel.PRIVATE
    destinationDir = file('./javadocs/')
}

sourceCompatibility = 17

repositories {
    maven {
        url 'https://repo.fintlabs.no/releases'
    }
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation('com.google.guava:guava:31.1-jre')
    implementation('org.apache.commons:commons-lang3:3.12.0')
    implementation('org.apache.tika:tika-core:2.3.0')
    // Updates to 3.x do not work :(
    implementation('org.glassfish.jersey.core:jersey-client:2.35')
    implementation('org.glassfish.jersey.core:jersey-common:2.35')
    implementation('org.jooq:jool-java-8:0.9.14')
    implementation 'org.projectlombok:lombok'

    annotationProcessor 'org.projectlombok:lombok'
    // Spring adds validation-api 1.x and hibernate-validator 5.x by default, all three dependencies needed to override.
    // Version 6.1.0 does not work :(
    implementation 'javax.validation:validation-api:2.0.1.Final'
    implementation 'org.hibernate.validator:hibernate-validator:6.0.17.Final'
    implementation 'org.hibernate.validator:hibernate-validator-annotation-processor:6.0.17.Final'

    implementation('org.springframework.boot:spring-boot-starter-actuator')
    implementation('io.micrometer:micrometer-registry-prometheus')


    implementation('no.fint:fint-sse:2.0.1')
    implementation('no.fint:fint-event-model:3.0.2')
    implementation('no.fint:fint-relation-model:1.1.6')
    implementation('no.fint:fint-model-resource:0.4.1')

    implementation('no.fintlabs:fint-arkiv-case-defaults:4.2.0')
    implementation("no.fint:fint-arkiv-resource-model-java:${apiVersion}")
    implementation("no.fint:fint-administrasjon-model-java:${apiVersion}")

    implementation('org.springframework.boot:spring-boot-starter-web')
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation('org.springframework.boot:spring-boot-starter-actuator')

    testImplementation('cglib:cglib-nodep:3.3.0')
    testImplementation('org.spockframework:spock-spring:2.3-groovy-4.0')
    testImplementation('org.spockframework:spock-core:2.2-groovy-4.0')
    testImplementation('org.springframework.boot:spring-boot-starter-test')
    implementation 'com.azure:azure-storage-blob:12.20.0'
    implementation 'io.projectreactor:reactor-core:3.4.24'
    implementation 'commons-beanutils:commons-beanutils:1.9.4'
    implementation 'org.apache.commons:commons-text:1.10.0'
}

//bootRepackage.enabled = false

bootRun {
    systemProperties System.properties
}

test {
    testLogging {
        events 'passed', 'skipped', 'failed'
    }
}

jsonSchema2Pojo {
    targetPackage = 'no.p360.model'
    sourceType = 'json'
    includeGetters = true
    includeSetters = true
}
